--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -1,5 +1,6 @@
 <!-- form 생성 -->
 <form action='#' method='post'>
+    {% csrf_token %}
     <h1> {{question.question_text}} </h1>
     {% for choice in question.choice_set.all %}
         <input type='radio' name='choice' id='choice{{ forloop.counter }}' value='{{choice.id}}'>
